--- a/angular.json
+++ b/angular.json
@@ -91,7 +91,9 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+              "src/assets/javascript/sidebare.js"
+            ]
           }
         },
         "lint": {
