--- a/angular.json
+++ b/angular.json
@@ -24,11 +24,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css",
-              "../node_modules/@syncfusion/ej2-base/styles/material.css",
-              "../node_modules/@syncfusion/ej2-buttons/styles/material.css",
-              "../node_modules/@syncfusion/ej2-popups/styles/material.css",
-              "../node_modules/@syncfusion/ej2-navigations/styles/material.css"
+              "src/styles.css"
 
 
 
