--- a/package.json
+++ b/package.json
@@ -11,31 +11,33 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.4",
-    "@angular/common": "~10.0.4",
-    "@angular/compiler": "~10.0.4",
-    "@angular/core": "~10.0.4",
-    "@angular/forms": "~10.0.4",
-    "@angular/localize": "^10.0.5",
-    "@angular/platform-browser": "~10.0.4",
-    "@angular/platform-browser-dynamic": "~10.0.4",
-    "@angular/router": "~10.0.4",
+    "@angular/animations": "^10.0.10",
+    "@angular/common": "^10.0.10",
+    "@angular/compiler": "^10.0.10",
+    "@angular/core": "^10.0.10",
+    "@angular/forms": "^10.0.10",
+    "@angular/localize": "^10.0.10",
+    "@angular/platform-browser": "^10.0.10",
+    "@angular/platform-browser-dynamic": "^10.0.10",
+    "@angular/router": "^10.0.10",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "angular-slick": "0.0.0",
-    "ejs": "^3.1.3",
+    "bootstrap": "^4.5.2",
+    "ejs": "^3.1.5",
     "g": "^2.0.1",
     "jquery": "^3.5.1",
+    "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
+    "tslib": "^2.0.1",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.3",
-    "@angular/cli": "~10.0.3",
-    "@angular/compiler-cli": "~10.0.4",
-    "@types/node": "^12.11.1",
-    "@types/jasmine": "~3.5.0",
+    "@angular-devkit/build-angular": "^0.1000.6",
+    "@angular/cli": "^10.0.6",
+    "@angular/compiler-cli": "^10.0.10",
+    "@types/jasmine": "^3.5.12",
     "@types/jasminewd2": "~2.0.3",
+    "@types/node": "^12.12.54",
     "codelyzer": "^6.0.0",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -46,7 +48,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.3",
     "typescript": "~3.9.5"
   }
 }
