--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "ejs": "^3.1.5",
     "g": "^2.0.1",
     "jquery": "^3.5.1",
+    "mdbootstrap": "^4.19.1",
     "popper.js": "^1.16.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.1",
