--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "^10.0.10",
     "@angular/platform-browser-dynamic": "^10.0.10",
     "@angular/router": "^10.0.10",
+    "@fortawesome/angular-fontawesome": "^0.7.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "angular-slick": "0.0.0",
     "bootstrap": "^4.5.2",
